--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,20 @@
 
 
 
+.box{
+  border-radius : 10px;
+  background-color: #D9D9D9;
+
+}
+
+.inBox{
+  border-radius : 10px;
+  background-color: #FFFFFF;
+  
+}
+
+.bannerImage{
+  width: 250px;
+  height: 200px;
+}
+
